--- a/.phraseapp.yml
+++ b/.phraseapp.yml
@@ -1,1 +1,12 @@
-
+---
+phraseapp:
+  pull:
+    targets:
+    - file: locales/<locale_name>.json
+      params:
+        file_format: nested_json
+  push:
+    sources:
+    - file:
+      params:
+        file_format: nested_json
